--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </h2>
               <p class="country-description">
                 India, country that occupies the greater part of South Asia. Its capital is New
-                Delhi, built in the 20th century just south of the historic hub of Old Delhi to
+                Delhi, built in the 20 century just south of the historic hub of Old Delhi to
                 serve as India’s administrative centre.
               </p>
               <a href="india.html">Read more</a>
